modified Dockerfile with bro-pkg

--- a/broctl.cfg
+++ b/broctl.cfg
@@ -58,11 +58,11 @@ SitePolicyScripts = local.bro
 
 # Location of the log directory where log files will be archived each rotation
 # interval.
-LogDir = /opt/bro/logs
+LogDir = /app/bro/logs
 
 # Location of the spool directory where files and data that are currently being
 # written are stored.
-SpoolDir = /opt/bro/spool
+SpoolDir = /app/bro/spool
 
 # Location of other configuration files that can be used to customize
 # BroControl operation (e.g. local networks, nodes).
